--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,8 +14,10 @@
         <div id="chat-container">
             <div id="chat-box"></div>
             <div id="status-area"></div>
+            <!-- 画像プレビューエリア -->
             <div id="preview-area"></div>
             <div id="input-area">
+                <!-- 画像添付ボタンと非表示のファイル入力 -->
                 <button id="attach-button" title="画像を添付">📎</button>
                 <input type="file" id="image-input" accept="image/*" style="display: none;">
                 <input type="text" id="message-input" placeholder="メッセージを入力..." disabled>
@@ -36,6 +38,7 @@
         const statusArea = document.getElementById('status-area');
         const imagePanel = document.getElementById('image-panel');
         const contextImage = document.getElementById('context-image');
+        // 画像関連の要素
         const attachButton = document.getElementById('attach-button');
         const imageInput = document.getElementById('image-input');
         const previewArea = document.getElementById('preview-area');
@@ -53,7 +56,7 @@
         let isFullAutoMode = false;
         let manualStop = false;
         let tempUserMessageElement = null;
-        let attachedImage = null; // ★ 追加: 添付画像データ
+        let attachedImage = null; // 添付画像データ
 
         ws.onopen = () => { /* 初期化は onmessage の config で行う */ };
         ws.onclose = () => { update_status("main", "サーバーとの接続が切れました。"); disable_input(true); }
@@ -90,8 +93,8 @@
                     remove_status('asr-server');
                     remove_temp_user_message();
                     if (message.data && message.data.trim()) {
-                        append_message(userName, message.data);
-                        update_status('speaker-decision', '➡️ 次の話者を決めています...');
+                        // テキストのみを渡す
+                        sendUserMessage(message.data);
                     } else {
                         update_status('asr-failed', '音声を認識できませんでした。', 2000);
                         if (isContinuousMode) {
@@ -103,7 +106,12 @@
                     break;
 
                 case 'history':
-                    append_message(message.data.name, message.data.content);
+                    // 履歴メッセージの表示 (画像対応)
+                    const content = message.data.content;
+                    const textOnly = content.replace(/\n\(画像添付\)$/, "");
+                    const hasImage = content.includes("\n(画像添付)");
+                    // 履歴からの画像表示は実装しないため、hasImageはここでは使わない
+                    append_message(message.data.name, textOnly, null);
                     break;
 
                 case 'next_speaker':
@@ -111,17 +119,17 @@
                     remove_status('speaker-decision');
                     update_status('ai_thinking', `🧠 ${message.data}が発言を考えています...`);
                     if (message.data !== userName || isFullAutoMode) {
-                         currentAiMessageElement = append_message(message.data, '');
+                        currentAiMessageElement = append_message(message.data, '');
                     }
                     break;
 
                 case 'chunk':
                     update_ai_message(message.data.content);
                     break;
-                
+
                 case 'utterance_end':
                     remove_status('ai_thinking');
-                    if(!isFullAutoMode) {
+                    if (!isFullAutoMode) {
                         update_status('speaker-decision', '➡️ 次の話者を決めています...');
                     }
                     currentAiMessageElement = null;
@@ -141,10 +149,10 @@
                     contextImage.src = message.url;
                     break;
 
-                case 'status_update': 
+                case 'status_update':
                     update_status(message.data.id, message.data.text);
                     break;
-                case 'status_remove': 
+                case 'status_remove':
                     remove_status(message.data.id);
                     break;
             }
@@ -172,7 +180,9 @@
                         interimTranscript += event.results[i][0].transcript;
                     }
                 }
+
                 update_temp_user_message(interimTranscript);
+
                 if (finalTranscript) {
                     const trimmedTranscript = finalTranscript.trim();
                     manualStop = true;
@@ -180,21 +190,25 @@
                     sendUserMessage(trimmedTranscript);
                 }
             };
+
             recognition.onend = () => {
                 micButton.classList.remove('recording');
                 micButton.textContent = isContinuousMode ? "🎙️" : "🎤";
                 remove_temp_user_message();
                 remove_status('main-prompt');
+
                 if (manualStop) {
                     manualStop = false;
                     return;
                 }
+
                 if (isContinuousMode && aiTurnFinished && !isPlaying) {
                     setTimeout(() => startRecording(), 100);
                 } else if (!isContinuousMode) {
                     enable_input();
                 }
             };
+
             recognition.onerror = (event) => {
                 console.error("Speech recognition error:", event.error);
                 if (event.error !== 'aborted') {
@@ -204,31 +218,34 @@
         };
         const update_status = (id, text, timeout = 0) => { let el = document.getElementById(id); if (!el) { el = document.createElement('div'); el.id = id; el.className = 'status-item'; statusArea.appendChild(el); } el.textContent = text; if (timeout > 0) { setTimeout(() => { if (el) el.remove(); }, timeout); } };
         const remove_status = (id) => { const el = document.getElementById(id); if (el) el.remove(); };
-        const enable_input = (isManual = true) => { 
-            if(isFullAutoMode) return;
+        const enable_input = (isManual = true) => {
+            if (isFullAutoMode) return;
             messageInput.disabled = false; sendButton.disabled = false; micButton.disabled = false; attachButton.disabled = false;
-            if (!isContinuousMode || isManual) { remove_status("main-prompt"); update_status("main-prompt", "メッセージを入力またはマイクを押してください。"); } };
-        const disable_input = (isError = false) => { 
-            messageInput.disabled = true; 
-            sendButton.disabled = true; 
-            micButton.disabled = true; 
+            if (!isContinuousMode || isManual) { remove_status("main-prompt"); update_status("main-prompt", "メッセージを入力またはマイクを押してください。"); }
+        };
+        const disable_input = (isError = false) => {
+            messageInput.disabled = true;
+            sendButton.disabled = true;
+            micButton.disabled = true;
             attachButton.disabled = true;
-            if(!isFullAutoMode) remove_status("main-prompt");
+            if (!isFullAutoMode) remove_status("main-prompt");
         };
 
-        const append_message = (name, text, imageSrc = null) => { 
+        // 画像表示に対応
+        const append_message = (name, text, imageSrc = null) => {
             const isUser = name === userName;
             const messageClass = (isUser && !isFullAutoMode) ? 'user-message' : 'ai-message';
-            const el = document.createElement('div'); 
+            const el = document.createElement('div');
             el.classList.add('message', messageClass);
             let imageHTML = '';
             if (imageSrc) {
                 imageHTML = `<img src="${imageSrc}" class="message-image" alt="添付画像">`;
             }
-            el.innerHTML = `<strong class="name">${name}</strong>${imageHTML}<p>${text}</p>`; 
-            chatBox.appendChild(el); 
-            chatBox.scrollTop = chatBox.scrollHeight; 
-            return el; 
+            // テキストが空でもpタグは生成する（AIのストリーミング表示のため）
+            el.innerHTML = `<strong class="name">${name}</strong>${imageHTML}<p>${text || ''}</p>`;
+            chatBox.appendChild(el);
+            chatBox.scrollTop = chatBox.scrollHeight;
+            return el;
         };
         const update_ai_message = (chunk) => { if (currentAiMessageElement) { currentAiMessageElement.querySelector('p').textContent += chunk; chatBox.scrollTop = chatBox.scrollHeight; } };
 
@@ -294,6 +311,7 @@
             source.start();
         };
 
+        // メッセージ送信ロジックを一本化
         const sendUserMessage = (message) => {
             const text = message || '';
             const image = attachedImage || null;
@@ -308,17 +326,17 @@
         }
 
         const handleTextInput = () => {
-             const message = messageInput.value;
-             if ((message && !messageInput.disabled) || attachedImage) {
+            const message = messageInput.value;
+            if ((message && !messageInput.disabled) || attachedImage) {
                 sendUserMessage(message);
                 messageInput.value = '';
-             }
+            }
         };
 
+        // 画像添付関連の関数
         const handleImageAttachment = (event) => {
             const file = event.target.files[0];
             if (!file) return;
-
             const reader = new FileReader();
             reader.onload = (e) => {
                 attachedImage = e.target.result;
@@ -330,7 +348,7 @@
                 previewArea.querySelector('.remove-preview-btn').onclick = clearAttachment;
             };
             reader.readAsDataURL(file);
-            imageInput.value = ''; // 同じファイルを連続で選択できるように
+            imageInput.value = '';
         };
         const clearAttachment = () => {
             attachedImage = null;
@@ -339,7 +357,11 @@
 
         const startRecording = async () => {
             if (isFullAutoMode || micButton.classList.contains('recording')) return;
-            disable_input();
+            // disable_inputにはボタン制御も含まれるため、個別で制御
+            messageInput.disabled = true;
+            sendButton.disabled = true;
+            attachButton.disabled = true;
+
             micButton.classList.add('recording');
             micButton.textContent = "⏹️";
             update_status('main-prompt', '🎤 話してください...');
@@ -354,7 +376,12 @@
                     console.warn("Recognition might be already active:", e);
                 }
             } else {
-                 try {
+                if (stream) {
+                    stream.getAudioTracks().forEach(track => {
+                        if (!track.enabled) { track.enabled = true; console.log("🎤 Mic Unmuted for recording (Server ASR)"); }
+                    });
+                }
+                try {
                     if (audioContext.state === 'suspended') { await audioContext.resume(); }
                     stream = await navigator.mediaDevices.getUserMedia({ audio: true });
                     mediaRecorder = new MediaRecorder(stream, { mimeType: 'audio/webm' });
@@ -391,6 +418,7 @@
             micButton.textContent = isContinuousMode ? "🎙️" : "🎤";
             remove_temp_user_message();
             remove_status('main-prompt');
+
             if (userInputMode === 'browser') {
                 if (recognition) { manualStop = true; recognition.abort(); }
             } else {
@@ -399,7 +427,7 @@
             }
         };
         micButton.onclick = () => {
-            if(isFullAutoMode) return;
+            if (isFullAutoMode) return;
             isContinuousMode = !isContinuousMode;
             micButton.classList.toggle('continuous-mode', isContinuousMode);
             if (isContinuousMode) {
@@ -412,6 +440,7 @@
 
         sendButton.onclick = handleTextInput;
         messageInput.addEventListener('keypress', (e) => { if (e.key === 'Enter') handleTextInput() });
+        // 画像添付ボタンのイベントリスナー
         attachButton.onclick = () => imageInput.click();
         imageInput.onchange = handleImageAttachment;
     </script>
